--- a/app/widgets/navigation/navigation-widget-blocks.html
+++ b/app/widgets/navigation/navigation-widget-blocks.html
@@ -2,17 +2,17 @@
     <div class="nav-widget-container">
         <md-toolbar class="md-whiteframe-z1 md-toolbar-tools-small"><span>Scheduler</span></md-toolbar>
         <div md-theme="{{$root.themePrimaryButtons}}" layout="row" layout-wrap layout-align="center">
-            <md-button ng-repeat="subNr in $root.systemConfig.subarrayNrs" class="md-primary md-raised" style="margin: 1px 1px 0 0"
+            <md-button ng-repeat="subNr in $root.systemConfig.subarrayNrs" class="md-primary md-raised" style="margin: 1px 1px 0 1px; width: 148px"
                 ng-click="$root.stateGo('scheduler.resources', {subarray_id: subNr})">
-                {{'Setup Subarray ' + subNr}}
+                Subarray {{subNr}}
             </md-button>
-            <md-button class="md-primary md-raised" ng-click="$root.stateGo('scheduler.drafts')" style="width: 230px">
+            <md-button class="md-primary md-raised" ng-click="$root.stateGo('scheduler.drafts')">
                 <span class="fa fa-pencil"></span>Schedule Block Approved
             </md-button>
-            <md-button class="md-primary md-raised" ng-click="$root.stateGo('scheduler')" style="width: 230px">
+            <md-button class="md-primary md-raised" ng-click="$root.stateGo('scheduler')">
                 <span class="fa fa-list"></span>Observations Workflow
             </md-button>
-            <md-button class="md-raised md-primary" ng-click="$root.stateGo('scheduler.observations')" style="width: 230px">
+            <md-button class="md-raised md-primary" ng-click="$root.stateGo('scheduler.observations')">
                 <span class="fa fa-binoculars"></span>Observations Overview</md-button>
         </div>
     </div>
@@ -40,10 +40,11 @@
     </div>
 
     <div layout="column" class="nav-widget-container">
-        <md-toolbar class="md-whiteframe-z1 md-toolbar-tools-small"><span>Controls & Info</span></md-toolbar>
+        <md-toolbar class="md-whiteframe-z1 md-toolbar-tools-small"><span>Controls</span></md-toolbar>
         <div md-theme="{{$root.themePrimaryButtons}}" layout="column">
             <md-button class="md-raised md-primary" ng-click="$root.stateGo('process-control')"><span class="fa fa-wrench"></span>Process Control</md-button>
             <md-button class="md-raised md-primary" ng-click="$root.stateGo('cam-components')"><span class="fa fa-cubes"></span>CAM Components</md-button>
+            <md-button class="md-raised md-primary" ng-click="$root.stateGo('alarms')"><span class="fa fa-warning"></span>Alarms</md-button>
             <md-button class="md-raised md-primary" ng-click="$root.stateGo('device-status')"><span class="fa fa-th-list"></span>Device Status</md-button>
             <md-button class="md-raised md-primary" ng-click="$root.stateGo('video')" ng-disabled="!$root.showVideoLinks"><span class="fa fa-video-camera"></span>Video</md-button>
         </div>
@@ -56,7 +57,7 @@
             <md-button class="md-raised md-primary" ng-click="$root.stateGo('userlogs-report')"><span class="fa fa-file-pdf-o"></span>User Log Reports</md-button>
             <md-button class="md-raised md-primary" ng-click="$root.stateGo('utilisation-report')"><span class="fa fa-file-pdf-o"></span>Utilisation Report</md-button>
             <md-button class="md-raised md-primary" ng-click="$root.stateGo('instrumental-config')"><span class="fa fa-question-circle"></span>Instrumental Config</md-button>
-
+            <md-button class="md-raised md-primary" ng-click="$root.openIRCDisplay()">#IRC</md-button>
         </div>
     </div>
 
